--- a/manifest.json
+++ b/manifest.json
@@ -23,7 +23,8 @@
       "js": [
         "content.js"
       ],
-      "run_at": "document_end"
+      "run_at": "document_end",
+      "all_frames": true
     }
   ],
   "action": {
